...
      />
      <Tab.Screen
        name="Upcoming"
        component={UpcomingNavigator}
        options={{
          title: 'Events',
          tabBarTestID: 'tab-events',
          tabBarAccessibilityLabel: 'Events',
          tabBarIcon: ({ color, size }) => (
            <UpcomingIcon size={size} color={color} />
          ),
        }}
      />
      <Tab.Screen
        name="MyBubbles"
        component={BubblesNavigator}
        options={{
          title: 'Bubbles',
          tabBarTestID: 'tab-my-bubbles',
          tabBarAccessibilityLabel: 'My Bubbles',
          tabBarIcon: ({ color, size }) => (
            <BubblesIcon size={size} color={color} />
          ),
        }}
        listeners={({ navigation }) => ({
          tabPress: (e) => {
...
